--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "conversor-romano",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-  "start": "node server.js",
-  "test": "jest"
+    "test": "node ./test/test.js",
+    "build": "echo 'No build step required'"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
-}
+
