Fix: agregar config para servir public/index.html

--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,16 @@
   "version": 2,
   "public": true,
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "public/index.html", "use": "@vercel/static" }
+    { "src": "api/a2r.js", "use": "@vercel/node" },
+    { "src": "api/r2a.js", "use": "@vercel/node" },
+    { "src": "public/index.html", "use": "@vercel/static" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/a2r", "dest": "/api/a2r.js" },
-    { "src": "/r2a", "dest": "/api/r2a.js" },
-    { "src": "/", "dest": "/public/index.html" }
+    { "src": "/api/a2r", "dest": "api/a2r.js" },
+    { "src": "/api/r2a", "dest": "api/r2a.js" },
+
+    { "src": "/", "dest": "public/index.html" },
+    { "src": "/(.*)", "dest": "public/$1" }
   ]
 }
