--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
 {
   "version": 2,
-  "public": true,
   "builds": [
-    { "src": "api/a2r.js", "use": "@vercel/node" },
-    { "src": "api/r2a.js", "use": "@vercel/node" },
-    { "src": "public/index.html", "use": "@vercel/static" },
+    { "src": "api/*.js", "use": "@vercel/node" },
     { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/a2r", "dest": "api/a2r.js" },
-    { "src": "/api/r2a", "dest": "api/r2a.js" },
-
-    { "src": "/", "dest": "public/index.html" },
-    { "src": "/(.*)", "dest": "public/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
+
