--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "public": "public",
   "routes": [
     { "src": "/a2r", "dest": "/api/a2r.js" },
-    { "src": "/r2a", "dest": "/api/r2a.js" }
+    { "src": "/r2a", "dest": "/api/r2a.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
 
