--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
+  "framework": null,
   "routes": [
     { "src": "/a2r", "dest": "/api/a2r.js" },
-    { "src": "/r2a", "dest": "/api/r2a.js" }
+    { "src": "/r2a", "dest": "/api/r2a.js" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
 
