Fix final de rutas y build

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "public": "public",
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" },
+    { "src": "public/index.html", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/a2r", "dest": "/api/a2r.js" },
@@ -10,5 +10,6 @@
     { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
+
 
 
