--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
+
 {
   "version": 2,
-  "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "public/index.html", "use": "@vercel/static" }
-  ],
   "routes": [
     { "src": "/a2r", "dest": "/api/a2r.js" },
-    { "src": "/r2a", "dest": "/api/r2a.js" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    { "src": "/r2a", "dest": "/api/r2a.js" }
   ]
 }
-
-
-
